src/lexer/grammarGraphsLanguageParser.py
# Generated from grammarGraphsLanguage.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarGraphsLanguageParser ( Parser ):

    grammarFileName = "grammarGraphsLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'grafo'", "'='", "'{'", "'}'", 
                     "'vertice'", "','", "'aresta'", "'('", "')'", "'>'", 
                     "'<'", "'<>'", "'.adiciona_vertice('", "'.remove_vertice('", 
                     "'.adiciona_aresta('", "'.remove_aresta('", "'.'", 
                     "'imprime_estrutura('", "'imprime_grafo('", "'.caminho_mais_curto('", 
                     "'.imprime_caminho_mais_curto('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUM_INT", 
                      "NUM_REAL", "IDENT", "CADEIA", "ESC_SEQ", "COMENTARIO", 
                      "WS" ]

    RULE_programa = 0
    RULE_declaracao_grafo = 1
    RULE_declaracao_simples = 2
    RULE_declaracao_complexa = 3
    RULE_grafo_info = 4
    RULE_vertice_ou_aresta = 5
    RULE_vertice_ou_aresta_simples = 6
    RULE_declaracao_vertice = 7
    RULE_vertice = 8
    RULE_vertice_sem_peso = 9
    RULE_vertice_com_peso = 10
    RULE_declaracao_aresta = 11
    RULE_aresta = 12
    RULE_aresta_declaracao_simples = 13
    RULE_aresta_declaracao_complexa = 14
    RULE_direcao = 15
    RULE_cmd = 16
    RULE_cmd_add_vertice = 17
    RULE_cmd_remove_vertice = 18
    RULE_cmd_add_aresta = 19
    RULE_cmd_remove_aresta = 20
    RULE_cmd_atribuicao = 21
    RULE_cmd_imprime = 22
    RULE_cmd_outros = 23
    RULE_atribuicao_peso = 24
    RULE_atribuicao_criacao_aresta = 25
    RULE_atribuicao_grafo = 26
    RULE_imprime_estrutura = 27
    RULE_imprime_grafo = 28
    RULE_caminho_mais_curto = 29
    RULE_imprime_caminho_mais_curto = 30
    RULE_valor = 31

    ruleNames =  [ "programa", "declaracao_grafo", "declaracao_simples", 
                   "declaracao_complexa", "grafo_info", "vertice_ou_aresta", 
                   "vertice_ou_aresta_simples", "declaracao_vertice", "vertice", 
                   "vertice_sem_peso", "vertice_com_peso", "declaracao_aresta", 
                   "aresta", "aresta_declaracao_simples", "aresta_declaracao_complexa", 
                   "direcao", "cmd", "cmd_add_vertice", "cmd_remove_vertice", 
                   "cmd_add_aresta", "cmd_remove_aresta", "cmd_atribuicao", 
                   "cmd_imprime", "cmd_outros", "atribuicao_peso", "atribuicao_criacao_aresta", 
                   "atribuicao_grafo", "imprime_estrutura", "imprime_grafo", 
                   "caminho_mais_curto", "imprime_caminho_mais_curto", "valor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    NUM_INT=23
    NUM_REAL=24
    IDENT=25
    CADEIA=26
    ESC_SEQ=27
    COMENTARIO=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammarGraphsLanguageParser.EOF, 0)

        def declaracao_grafo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGraphsLanguageParser.Declaracao_grafoContext)
            else:
                return self.getTypedRuleContext(grammarGraphsLanguageParser.Declaracao_grafoContext,i)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGraphsLanguageParser.CmdContext)
            else:
                return self.getTypedRuleContext(grammarGraphsLanguageParser.CmdContext,i)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = grammarGraphsLanguageParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35127300) != 0):
                self.state = 66
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 64
                    self.declaracao_grafo()
                    pass
                elif token in [19, 20, 25]:
                    self.state = 65
                    self.cmd()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(grammarGraphsLanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_grafoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_simples(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Declaracao_simplesContext,0)


        def declaracao_complexa(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Declaracao_complexaContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_declaracao_grafo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_grafo" ):
                listener.enterDeclaracao_grafo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_grafo" ):
                listener.exitDeclaracao_grafo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_grafo" ):
                return visitor.visitDeclaracao_grafo(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_grafo(self):

        localctx = grammarGraphsLanguageParser.Declaracao_grafoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao_grafo)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.declaracao_simples()
                self.state = 74
                self.match(grammarGraphsLanguageParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.declaracao_complexa()
                self.state = 77
                self.match(grammarGraphsLanguageParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_simplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(grammarGraphsLanguageParser.IDENT, 0)

        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_declaracao_simples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_simples" ):
                listener.enterDeclaracao_simples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_simples" ):
                listener.exitDeclaracao_simples(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_simples" ):
                return visitor.visitDeclaracao_simples(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_simples(self):

        localctx = grammarGraphsLanguageParser.Declaracao_simplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao_simples)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(grammarGraphsLanguageParser.T__1)
            self.state = 82
            self.match(grammarGraphsLanguageParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_complexaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(grammarGraphsLanguageParser.IDENT, 0)

        def grafo_info(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Grafo_infoContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_declaracao_complexa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_complexa" ):
                listener.enterDeclaracao_complexa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_complexa" ):
                listener.exitDeclaracao_complexa(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_complexa" ):
                return visitor.visitDeclaracao_complexa(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_complexa(self):

        localctx = grammarGraphsLanguageParser.Declaracao_complexaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_complexa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(grammarGraphsLanguageParser.T__1)
            self.state = 85
            self.match(grammarGraphsLanguageParser.IDENT)
            self.state = 86
            self.match(grammarGraphsLanguageParser.T__2)
            self.state = 87
            self.match(grammarGraphsLanguageParser.T__3)
            self.state = 88
            self.grafo_info()
            self.state = 89
            self.match(grammarGraphsLanguageParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Grafo_infoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_vertice(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGraphsLanguageParser.Declaracao_verticeContext)
            else:
                return self.getTypedRuleContext(grammarGraphsLanguageParser.Declaracao_verticeContext,i)


        def declaracao_aresta(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGraphsLanguageParser.Declaracao_arestaContext)
            else:
                return self.getTypedRuleContext(grammarGraphsLanguageParser.Declaracao_arestaContext,i)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_grafo_info

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrafo_info" ):
                listener.enterGrafo_info(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrafo_info" ):
                listener.exitGrafo_info(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrafo_info" ):
                return visitor.visitGrafo_info(self)
            else:
                return visitor.visitChildren(self)




    def grafo_info(self):

        localctx = grammarGraphsLanguageParser.Grafo_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_grafo_info)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==8:
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 91
                    self.declaracao_vertice()
                    pass
                elif token in [8]:
                    self.state = 92
                    self.declaracao_aresta()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertice_ou_arestaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertice(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.VerticeContext,0)


        def aresta(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.ArestaContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_vertice_ou_aresta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertice_ou_aresta" ):
                listener.enterVertice_ou_aresta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertice_ou_aresta" ):
                listener.exitVertice_ou_aresta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertice_ou_aresta" ):
                return visitor.visitVertice_ou_aresta(self)
            else:
                return visitor.visitChildren(self)




    def vertice_ou_aresta(self):

        localctx = grammarGraphsLanguageParser.Vertice_ou_arestaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vertice_ou_aresta)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.vertice()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.aresta()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertice_ou_aresta_simplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertice_sem_peso(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Vertice_sem_pesoContext,0)


        def aresta_declaracao_simples(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Aresta_declaracao_simplesContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_vertice_ou_aresta_simples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertice_ou_aresta_simples" ):
                listener.enterVertice_ou_aresta_simples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertice_ou_aresta_simples" ):
                listener.exitVertice_ou_aresta_simples(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertice_ou_aresta_simples" ):
                return visitor.visitVertice_ou_aresta_simples(self)
            else:
                return visitor.visitChildren(self)




    def vertice_ou_aresta_simples(self):

        localctx = grammarGraphsLanguageParser.Vertice_ou_aresta_simplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vertice_ou_aresta_simples)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.vertice_sem_peso()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.aresta_declaracao_simples()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_verticeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertice(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGraphsLanguageParser.VerticeContext)
            else:
                return self.getTypedRuleContext(grammarGraphsLanguageParser.VerticeContext,i)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_declaracao_vertice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_vertice" ):
                listener.enterDeclaracao_vertice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_vertice" ):
                listener.exitDeclaracao_vertice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_vertice" ):
                return visitor.visitDeclaracao_vertice(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_vertice(self):

        localctx = grammarGraphsLanguageParser.Declaracao_verticeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracao_vertice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(grammarGraphsLanguageParser.T__5)
            self.state = 107
            self.vertice()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 108
                self.match(grammarGraphsLanguageParser.T__6)
                self.state = 109
                self.vertice()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(grammarGraphsLanguageParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerticeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertice_com_peso(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Vertice_com_pesoContext,0)


        def vertice_sem_peso(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Vertice_sem_pesoContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_vertice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertice" ):
                listener.enterVertice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertice" ):
                listener.exitVertice(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertice" ):
                return visitor.visitVertice(self)
            else:
                return visitor.visitChildren(self)




    def vertice(self):

        localctx = grammarGraphsLanguageParser.VerticeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vertice)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.vertice_com_peso()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.vertice_sem_peso()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertice_sem_pesoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(grammarGraphsLanguageParser.IDENT, 0)

        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_vertice_sem_peso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertice_sem_peso" ):
                listener.enterVertice_sem_peso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertice_sem_peso" ):
                listener.exitVertice_sem_peso(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertice_sem_peso" ):
                return visitor.visitVertice_sem_peso(self)
            else:
                return visitor.visitChildren(self)




    def vertice_sem_peso(self):

        localctx = grammarGraphsLanguageParser.Vertice_sem_pesoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vertice_sem_peso)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(grammarGraphsLanguageParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertice_com_pesoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(grammarGraphsLanguageParser.IDENT, 0)

        def valor(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.ValorContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_vertice_com_peso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertice_com_peso" ):
                listener.enterVertice_com_peso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertice_com_peso" ):
                listener.exitVertice_com_peso(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertice_com_peso" ):
                return visitor.visitVertice_com_peso(self)
            else:
                return visitor.visitChildren(self)




    def vertice_com_peso(self):

        localctx = grammarGraphsLanguageParser.Vertice_com_pesoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vertice_com_peso)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(grammarGraphsLanguageParser.IDENT)
            self.state = 124
            self.match(grammarGraphsLanguageParser.T__2)
            self.state = 125
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_arestaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aresta(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarGraphsLanguageParser.ArestaContext)
            else:
                return self.getTypedRuleContext(grammarGraphsLanguageParser.ArestaContext,i)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_declaracao_aresta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_aresta" ):
                listener.enterDeclaracao_aresta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_aresta" ):
                listener.exitDeclaracao_aresta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_aresta" ):
                return visitor.visitDeclaracao_aresta(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_aresta(self):

        localctx = grammarGraphsLanguageParser.Declaracao_arestaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_declaracao_aresta)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(grammarGraphsLanguageParser.T__7)
            self.state = 128
            self.aresta()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 129
                self.match(grammarGraphsLanguageParser.T__6)
                self.state = 130
                self.aresta()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(grammarGraphsLanguageParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArestaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aresta_declaracao_simples(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Aresta_declaracao_simplesContext,0)


        def aresta_declaracao_complexa(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.Aresta_declaracao_complexaContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_aresta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAresta" ):
                listener.enterAresta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAresta" ):
                listener.exitAresta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAresta" ):
                return visitor.visitAresta(self)
            else:
                return visitor.visitChildren(self)




    def aresta(self):

        localctx = grammarGraphsLanguageParser.ArestaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_aresta)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.aresta_declaracao_simples()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.aresta_declaracao_complexa()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aresta_declaracao_simplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(grammarGraphsLanguageParser.IDENT)
            else:
                return self.getToken(grammarGraphsLanguageParser.IDENT, i)

        def direcao(self):
            return self.getTypedRuleContext(grammarGraphsLanguageParser.DirecaoContext,0)


        def getRuleIndex(self):
            return grammarGraphsLanguageParser.RULE_aresta_declaracao_simples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAresta_declaracao_simples" ):
                listener.enterAresta_declaracao_simples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAresta_declaracao_simples" ):
                listener.exitAresta_declaracao_simples(self)
